--- a/src/components/BienvenidaBotines.astro
+++ b/src/components/BienvenidaBotines.astro
@@ -1,31 +1,32 @@
 ---
 ---
 
-<div class="relative h-[600px] w-full rounded-3xl overflow-hidden font-sans">
- <img src="bienevenida2.webp" alt="" class="absolute inset-0 w-full h-full object-cover object-center z-0" />
+<div class="relative h-[400px] sm:h-[600px] w-full rounded-3xl overflow-hidden font-sans">
+  <!-- Imagen de fondo -->
+  <img src="bienevenida2.webp" alt="" class="absolute inset-0 w-full h-full object-cover object-center z-0" />
 
-  
-  <!-- Overlay oscuro para mejorar la legibilidad del texto -->
-  <div class="absolute inset-0 bg-black bg-opacity-40 z-10"></div>
-  
+  <!-- Overlay oscuro -->
+  <div class="absolute inset-0 bg-black/70 sm:bg-black/40 z-10"></div>
+
   <!-- Contenido -->
-  <div class="relative z-20 h-full flex items-center ">
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="max-w-xl">
-        <h1 class="text-4xl sm:text-5xl md:text-6xl text-left font-semibold text-white mb-4 leading-tight animate-fade-right animate-delay-600">
-          ¡Bienvenido a Botines Premium JM!
-        </h1>
-        <p class="text-xl sm:text-2xl text-gray-200 mb-8 font-light animate-fade-right animate-duration-600">
-          Experimenta el poder y la precisión con nuestra colección exclusiva de botines de fútbol.
-        </p>
-        <a 
-          href="https://www.instagram.com/botinespremium.jm.arg/" target="_blank" rel="noopener noreferrer" 
-          class="inline-block text-white font-medium py-3 px-6 rounded-full border  border-white hover:bg-white hover:text-black hover:font-medium transition duration-300 ease-in-out animate-fade-right animate-delay-600 "
-        >
-          Visita nuestro Feed
-        </a>
-      </div>
+  <div class="relative z-20 h-full flex items-center text-center sm:text-left justify-center sm:justify-start px-6">
+    <div class="max-w-lg">
+      <h1 class="text-3xl sm:text-5xl md:text-6xl font-semibold text-white mb-2 leading-snug animate-fade-right">
+        ¡Bienvenido a Botines Premium JM!
+      </h1>
+      <p class="text-lg sm:text-2xl text-gray-200 mb-5 font-light animate-fade-right">
+        Experimenta el poder y la precisión con nuestra colección exclusiva de botines de fútbol.
+      </p>
+      <a 
+        href="https://www.instagram.com/botinespremium.jm.arg/" target="_blank" rel="noopener noreferrer"
+        class="inline-block text-white font-medium px-5 py-2 sm:px-6 sm:py-3 rounded-full border border-white hover:bg-white hover:text-black transition duration-300 ease-in-out animate-fade-right"
+      >
+        Visita nuestro Feed
+      </a>
     </div>
   </div>
 </div>
+
+
+
 
