--- a/src/components/ComoComprar.astro
+++ b/src/components/ComoComprar.astro
@@ -2,31 +2,34 @@
 
 ---
 
-<section class="py-16 ">
+<section class="py-16">
   <div class="container mx-auto px-6">
     <div class="flex flex-col md:flex-row items-center justify-between">
-      <div class="md:w-1/2 mb-8 md:mb-0">
-        <h2 class="text-3xl text-left font-bold mb-8">Cómo comprar o encargar</h2>
+      <div class="md:w-1/2 text-center md:text-left mb-8 md:mb-0">
+        <h2 class="text-3xl font-bold mb-8">Cómo comprar o encargar</h2>
         <p class="text-lg text-gray-700 mb-6">
           Comprar tus botines favoritos es fácil y rápido. Sigue estos pasos:
         </p>
-        <ol class="list-decimal list-inside text-gray-700 mb-8 space-y-2">
+        <ol class="list-decimal list-inside text-gray-700 mb-8 space-y-2 text-left">
           <li>Explora nuestra colección y elige tus botines preferidos.</li>
           <li>Selecciona tu talle y color (Si el modelo que buscas no lo tenemos en stock, tranquilo, te lo podemos traer por pedido.).</li>
           <li>Envíanos una foto del modelo y talle que hayas elegido a nuestro WhatsApp.</li>
           <li>Allí te pasaremos los métodos de pago.</li>
           <li>¡Listo! Espera la llegada de tus nuevos botines.</li>
         </ol>
-        <a 
-        href="https://wa.me/5492473417067" target="_blank" rel="noopener noreferrer"
-          class="inline-block text-black font-light py-3 px-6 rounded-full border  border-black hover:bg-black hover:text-white transition duration-300 ease-in-out"
-        >
-           Manda tu WhatsApp
-        </a>
+        <div class="flex justify-center md:justify-start">
+          <a 
+            href="https://wa.me/5492473417067" target="_blank" rel="noopener noreferrer"
+            class="inline-block text-black font-light py-3 px-6 rounded-full border border-black hover:bg-black hover:text-white transition duration-300 ease-in-out"
+          >
+            Manda tu WhatsApp
+          </a>
+        </div>
       </div>
-      <div class="md:w-1/2 flex justify-center">
-       <img src="/Whats.webp" alt="Mockup de cómo comprar" width={1000} height={1000} class="" />
+      <div class="md:w-1/2  justify-center hidden sm:block md:flex">
+        <img src="/Whats.webp" alt="Mockup de cómo comprar" width="1000" height="1000" class="w-2/3 sm:w-full md:w-auto" />
       </div>
+      
     </div>
   </div>
 </section>
