--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Layout from '../layouts/Layout.astro';
 
 ---
 
-<Layout title="Your Page Title" description="Your Page Description">
+<Layout title="Botines Premium JM - Venta de botines profesional" description="Venta de botines de fútbol, fútbol 5 y futsal de las mejores marcas. Envíos a todo el país.">
 	<main class="px-6 ">
 		<Header />
 		<BienvenidaBotines id="Inicio" />
