--- a/src/components/Botin.astro
+++ b/src/components/Botin.astro
@@ -12,7 +12,7 @@ interface Props {
 const { imagen, precio, marca, modelo, description, categoria } = Astro.props;
 ---
 
-<div class="bg-white rounded-3xl overflow-hidden shadow">
+<div class="flex flex-col justify-between h-full bg-white rounded-3xl overflow-hidden shadow">
   <img src={imagen} class="flex-center p-2 overflow-hidden relative transition-all duration-300"/>
   <div class="p-2">
     <h4 class="font-semibold line-clamp-1 !py-0">{marca} {modelo}</h4>
