--- a/src/components/SeccionBotines.astro
+++ b/src/components/SeccionBotines.astro
@@ -2,14 +2,14 @@
 import Botin from "./Botin.astro";
 
 const botines = [
-  { imagen: "/superfly4.webp", precio: 135000, marca: "Nike", modelo: "Superfly 4", description: "Diseñados para jugadores rápidos y habilidosos, los Nike Mercurial Superfly 4 ofrecen velocidad, precisión y comodidad.", categoria: "Futbol" },
-  { imagen: "/Vapor16.webp", precio: 135000, marca: "Nike", modelo: "Vapor 16", description: "Diseñados para jugadores veloces y explosivos, los Nike Vapor 16 ofrecen una combinación perfecta de velocidad, agilidad y control.", categoria: "Futbol" },
-  { imagen: "/F50.webp", precio: 135000, marca: "Adidas", modelo: "F50", description: "Diseñados para jugadores veloces y ágiles, los Adidas F50 ofrecen una combinación perfecta de velocidad, precisión y control.", categoria: "Futbol" },
-  { imagen: "/gxIIsg.webp", precio: 135000, marca: "Nike", modelo: "Phantom GX II SG", description: "Diseñados para jugadores que buscan control y precisión, los Nike Phantom GX II SG ofrecen una experiencia de juego excepcional.", categoria: "Futbol" },
-  { imagen: "/superfly4.webp", precio: 135000, marca: "Nike", modelo: "Superfly 4", description: "Diseñados para jugadores rápidos y habilidosos, los Nike Mercurial Superfly 4 ofrecen velocidad, precisión y comodidad.", categoria: "Futbol" },
-  { imagen: "/Vapor16.webp", precio: 135000, marca: "Nike", modelo: "Vapor 16", description: "Diseñados para jugadores veloces y explosivos, los Nike Vapor 16 ofrecen una combinación perfecta de velocidad, agilidad y control.", categoria: "Futbol" },
-  { imagen: "/F50.webp", precio: 135000, marca: "Adidas", modelo: "F50", description: "Diseñados para jugadores veloces y ágiles, los Adidas F50 ofrecen una combinación perfecta de velocidad, precisión y control.", categoria: "Futbol" },
-  { imagen: "/gxIIsg.webp", precio: 135000, marca: "Nike", modelo: "Phantom GX II SG", description: "Diseñados para jugadores que buscan control y precisión, los Nike Phantom GX II SG ofrecen una experiencia de juego excepcional.", categoria: "Futbol" },
+{ imagen: "/C1.webp", precio: 135, marca: "Adidas", modelo: "F50+ FG", description: "TALLES DISPONIBLES: 40ARG/8US/26CM", categoria: "Futbol" },
+  { imagen: "/C2.webp", precio: 135, marca: "Nike", modelo: "Mercurial Superfly FG", description: "TALLES DISPONIBLES: 43ARG/10US/28CM.", categoria: "Futbol" },
+  { imagen: "/C3.webp", precio: 135, marca: "Nike", modelo: "Mercurial Superfly FG", description: "TALLES DISPONIBLES: 42ARG/9.5US/27.5CM.", categoria: "Futbol" },
+  { imagen: "/C4.webp", precio: 135, marca: "Adidas", modelo: "Copa Pure FG", description: "TALLES DISPONIBLES: 40.5ARG/8.5US/26.5CM.", categoria: "Futbol" },
+  { imagen: "/C5.webp", precio: 135, marca: "Adidas", modelo: "F50 SG", description: "TALLES DISPONIBLES: 43ARG/10US/28CM.", categoria: "Futbol" },
+  { imagen: "/C6.webp", precio: 135, marca: "Adidas", modelo: "Adipure FG", description: "40.5ARG/8.5US/26.5CM.", categoria: "Futbol" },
+  { imagen: "/F50.webp", precio: 135, marca: "Adidas", modelo: "F50 FG", description: "TALLES DISPONIBLES: 41ARG/9US/27CM - 43ARG/10US/28CM - 44ARG/11US/29CM.", categoria: "Futbol" },
+  { imagen: "/C8.webp", precio: 135, marca: "Nike", modelo: "Mercurial Vapor 16 FG", description: "TALLES DISPONIBLES: 44ARG/11US/29CM.", categoria: "Futbol" },
 ];
 ---
 
