--- a/src/components/SeccionBotines.astro
+++ b/src/components/SeccionBotines.astro
@@ -2,14 +2,14 @@
 import Botin from "./Botin.astro";
 
 const botines = [
-{ imagen: "/C1.webp", precio: 135, marca: "Adidas", modelo: "F50+ FG", description: "TALLES DISPONIBLES: 40ARG/8US/26CM", categoria: "Futbol" },
-  { imagen: "/C2.webp", precio: 135, marca: "Nike", modelo: "Mercurial Superfly FG", description: "TALLES DISPONIBLES: 43ARG/10US/28CM.", categoria: "Futbol" },
-  { imagen: "/C3.webp", precio: 135, marca: "Nike", modelo: "Mercurial Superfly FG", description: "TALLES DISPONIBLES: 42ARG/9.5US/27.5CM.", categoria: "Futbol" },
-  { imagen: "/C4.webp", precio: 135, marca: "Adidas", modelo: "Copa Pure FG", description: "TALLES DISPONIBLES: 40.5ARG/8.5US/26.5CM.", categoria: "Futbol" },
-  { imagen: "/C5.webp", precio: 135, marca: "Adidas", modelo: "F50 SG", description: "TALLES DISPONIBLES: 43ARG/10US/28CM.", categoria: "Futbol" },
-  { imagen: "/C6.webp", precio: 135, marca: "Adidas", modelo: "Adipure FG", description: "40.5ARG/8.5US/26.5CM.", categoria: "Futbol" },
-  { imagen: "/F50.webp", precio: 135, marca: "Adidas", modelo: "F50 FG", description: "TALLES DISPONIBLES: 41ARG/9US/27CM - 43ARG/10US/28CM - 44ARG/11US/29CM.", categoria: "Futbol" },
-  { imagen: "/C8.webp", precio: 135, marca: "Nike", modelo: "Mercurial Vapor 16 FG", description: "TALLES DISPONIBLES: 44ARG/11US/29CM.", categoria: "Futbol" },
+{ imagen: "/C1.webp", precio: 135, marca: "Adidas", modelo: "F50+ FG", description: "TALLES: 40ARG/8US/26CM", categoria: "Futbol" },
+  { imagen: "/C2.webp", precio: 135, marca: "Nike", modelo: "Mercurial Superfly FG", description: "TALLES: 43ARG/10US/28CM.", categoria: "Futbol" },
+  { imagen: "/C3.webp", precio: 135, marca: "Nike", modelo: "Mercurial Superfly FG", description: "TALLES: 42ARG/9.5US/27.5CM.", categoria: "Futbol" },
+  { imagen: "/C4.webp", precio: 135, marca: "Adidas", modelo: "Copa Pure FG", description: "TALLES: 40.5ARG/8.5US/26.5CM.", categoria: "Futbol" },
+  { imagen: "/C5.webp", precio: 135, marca: "Adidas", modelo: "F50 SG", description: "TALLES: 43ARG/10US/28CM.", categoria: "Futbol" },
+  { imagen: "/C6.webp", precio: 135, marca: "Adidas", modelo: "Adipure FG", description: "TALLES: 40.5ARG/8.5US/26.5CM.", categoria: "Futbol" },
+  { imagen: "/C7.webp", precio: 135, marca: "Adidas", modelo: "F50 FG", description: "TALLES: 41ARG/9US/27CM - 43ARG/10US/28CM - 44ARG/11US/29CM.", categoria: "Futbol" },
+  { imagen: "/C8.webp", precio: 135, marca: "Nike", modelo: "Mercurial Vapor 16 FG", description: "TALLES: 44ARG/11US/29CM.", categoria: "Futbol" },
 ];
 ---
 
