--- a/src/pages/GaleriaBotines.astro
+++ b/src/pages/GaleriaBotines.astro
@@ -64,7 +64,8 @@ const botines = [
 <Header/>
 <section class="py-12 bg-white">
   <div class=" mx-auto px-6">
-    <h2 class="text-3xl sm:text-5xl font-bold text-center mb-8">Botines Disponibles</h2>
+    <h2 class="text-3xl sm:text-5xl font-bold text-center mb-6">Stock Disponible</h2>
+    <p class="text-gray-400 text-center pb-6">Botines disponibles para entrega inmediata</p>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
       {botines.map((botin) => (
         <BotinesGaleria 
