--- a/src/pages/GaleriaBotines.astro
+++ b/src/pages/GaleriaBotines.astro
@@ -65,7 +65,7 @@ const botines = [
 <section class="py-12 bg-white">
   <div class=" mx-auto px-6">
     <h2 class="text-3xl sm:text-5xl font-bold text-center mb-6">Stock Disponible</h2>
-    <p class="text-gray-400 text-center pb-6">Botines disponibles para entrega inmediata</p>
+    <p class="text-gray-400 text-center pb-6">modelos disponibles por pedido</p>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
       {botines.map((botin) => (
         <BotinesGaleria 
@@ -79,6 +79,15 @@ const botines = [
       ))}
     </div>
   </div>
+  <div class="flex justify-center mt-12">
+    <a 
+      href="" target="_blank" rel="noopener noreferrer"
+      class="inline-block text-black font-light py-3 px-6 rounded-full border border-black hover:bg-black hover:text-white transition duration-300 ease-in-out"
+    >
+      Visita nuestro Drive
+    </a>
+  </div>
+  
 </main>
 </Layout>
 
