--- a/src/pages/GaleriaBotines.astro
+++ b/src/pages/GaleriaBotines.astro
@@ -81,7 +81,7 @@ const botines = [
   </div>
   <div class="flex justify-center mt-12">
     <a 
-      href="" target="_blank" rel="noopener noreferrer"
+      href="https://drive.google.com/drive/folders/1J1nI_qVPfweDrEibitvTLwLDzeDrixth" target="_blank" rel="noopener noreferrer"
       class="inline-block text-black font-light py-3 px-6 rounded-full border border-black hover:bg-black hover:text-white transition duration-300 ease-in-out"
     >
       Visita nuestro Drive
