--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import ComoComprar from '../components/ComoComprar.astro';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import SeccionBotines from '../components/SeccionBotines.astro';
+import SeccionZapas from '../components/SeccionZapas.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 import TresRectangulos from '../components/TresRectangulos.astro';
 import VideosEntregados from '../components/VideosEntregados.astro';
@@ -18,6 +19,9 @@ import Layout from '../layouts/Layout.astro';
 		<TresRectangulos />
 		<SectionContainer id="Destacados" />
 	<SeccionBotines />
+	<SectionContainer />
+	<SectionContainer  />
+	<SeccionZapas />
 	<SectionContainer />
 	<SectionContainer id="entregas">
 	<VideosEntregados  />
